# mini-social

./: LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d5d4d05b9381_add_username_to_users_table.py
backend/src/: app.py  db.py  users.py
backend/src/api/: health.py  posts.py
backend/src/infrastructure/orm/: __init__.py  base.py  post.py  user.py
backend/src/schemas/: __init__.py  post_schema.py  user_schemas.py
frontend/: Dockerfile  main.css  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: app.vue  type.ts
frontend/app/api/: apiRoutes.ts  fetch_token.ts  fetch_user_info.ts  fetch_with_token.ts
frontend/app/assets/: mock_img.jfif  profile_background.jfif
frontend/app/components/: BasePopup.vue  FeedHeader.vue  FeedPostHeader.vue  Header.vue  LoadingSpinner.vue  LogoutPopup.vue  ModalBackground.vue  Post.vue  PostPopup.vue  ProfilePicture.vue  SideBar.vue  SidebarProfileButton.vue
frontend/app/composables/: useUtils.ts
frontend/app/data/: mock_posts.ts
frontend/app/layouts/: auth.vue  default.vue
frontend/app/middleware/: auth.global.ts  route.global.ts
frontend/app/pages/: example.vue  index.vue  login.vue  profile.vue  register.vue
frontend/app/plugins/: myPlugin.ts
frontend/app/store/: authStore.ts  drawerStore.ts  postStore.ts  userStore.ts
frontend/app/utils/: formatDate.ts  formatPostDate.ts  formatUsername.ts
frontend/server/api/: manga_data.json  mangas.ts
(+25 files in other folders)
